// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App1 test init 1`] = `
<div>
  <div>
    hello app1
  </div>
</div>
`;

exports[`test update app1 1`] = `
<div>
  <div>
    hello app1 inc
  </div>
</div>
`;
